--- a/server/client/index.html
+++ b/server/client/index.html
@@ -3,8 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Get Togheter!</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="js/bootstrap.min.js"></script>
+    <title>Get Together!</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Try It</a>
+            </li>
+            </li>
+          </ul>
+        </div>
+        <a class="navbar-brand mx-auto" href="#">
+            <img src="image/LogoGetTorgether.png"  width="150" height="75" alt="">
+        </a>
+    </nav>
+    <img src="image/banner.jpeg" style="width: 100vw;" >
 </body>
 </html>
