--- a/server/client/index.html
+++ b/server/client/index.html
@@ -11,9 +11,16 @@
     <link rel="stylesheet" href="css/index.css">
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="js/beers-component.js" type="text/javascript"></script>
+    <script src="js/beer-component.js" type="text/javascript"></script>
+    <script src="js/recipes-component.js" type="text/javascript"></script>
+    <script src="js/recipe-component.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="css/style.css">
     <title>Get Together!</title>
 </head>
 <body>
+  <!--
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -36,6 +43,17 @@
           </div>
         
     </nav>
+  -->
     <div id="banner-image"> <img src="image/banner.jpeg"></div>
+    <a href="/profile.html">Vedi profilo</a>
+    <a href="/recipes.html">Vedi ricette</a>
+    <a href="/login.html">Login</a>
+    <a href="/logout">Logout</a>
+    <div id="app">
+      <beers-component v-bind:beers="beers"></beers-component>
+      <recipes-component v-bind:recipes="recipes"></recipes-component>
+      <div class="high-bar bg-green"> <span>Select cocktails</span></div>
+    </div>
+    <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
