--- a/server/client/login.html
+++ b/server/client/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <script src="js/fbscript.js"></script> 
 </head>
 <body>
     <form action="login" method="post">
@@ -15,5 +16,10 @@
         <button type="submit">Login</button>
     </form>
     
+    
+    <a href="/oauthfb">
+        <button> Login with facebook</button>
+    </a>
 </body>
+
 </html>
