--- a/server/client/profile1.html
+++ b/server/client/profile1.html
@@ -7,14 +7,28 @@ Loggedd innn!
 <script src="socket.io/socket.io.js"></script>
 <script type="text/javascript">
   var socket = io("http://192.168.1.114:4000");
-
+  let currId;
   socket.on("welcome", function (msg) {
     document.getElementById("response").innerHTML = msg + "<br/>";
+    currId = msg;
   });
+  socket.emit("login", "ok");
 
   socket.on("newFriend", function (msg) {
-    document.getElementById("newFriend").innerHTML = msg + "<br/>";
+    document.getElementById("newFriend").innerHTML =
+      document.getElementById("newFriend").innerHTML + msg.event + "<br/>";
   });
+
+  function send() {
+    const d = {
+      source: 1,
+      destination: 2,
+      event: "newFriend",
+      party: 0,
+      state: true,
+    };
+    socket.emit("newFriend", d);
+  }
 
   const root = document.getElementById("friend-conteinter");
   const aggiungiAmico = function (e) {
@@ -43,8 +57,8 @@ Loggedd innn!
         accettaBtn.innerText = "Accetta " + element.firstName;
       }
       div.innerHTML = `
-            <h4>${element.firstName} ${element.lastName}</h4>
-             <p>${element.email}</p>`;
+              <h4>${element.firstName} ${element.lastName}</h4>
+               <p>${element.email}</p>`;
       rootEl.appendChild(div);
       div.appendChild(accettaBtn);
     });
@@ -65,6 +79,14 @@ Loggedd innn!
   };
   getFriend();
 </script>
+
+<hr />
+<label for="send">Invia una newFriend</label>
+<br />
+<input type="text" id="userId" placeholder="user id" />
+<input type="text" id="type" placeholder="newFriend" />
+<input type="button" id="send" value="Invia" onclick="return send();" />
+<hr />
 <br />
 <h2>Notifiche:</h2>
 <hr />
