--- a/server/client/index.html
+++ b/server/client/index.html
@@ -7,53 +7,19 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-<!--<link rel="stylesheet" href="css/bootstrap-grid.min.css"> -->
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="js/beers-component.js" type="text/javascript"></script>
-    <script src="js/beer-component.js" type="text/javascript"></script>
-    <script src="js/recipes-component.js" type="text/javascript"></script>
-    <script src="js/recipe-component.js" type="text/javascript"></script>
+    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Get Together!</title>
 </head>
-<body>
-  <!--
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Try It</a>
-            </li>
-            </li>
-          </ul>
-        </div>
-        <div class="navbar-brand">
-          <a href="#" >
-              <img src="image/LogoGetTorgether.png" id="logo-nav" alt="logo" >
-          </a>
-          </div>
-        
-    </nav>
-  -->
-    <div id="banner-image"> <img src="image/banner.jpeg"></div>
-    <a href="/profile.html">Vedi profilo</a>
-    <a href="/recipes.html">Vedi ricette</a>
-    <a href="/login.html">Login</a>
-    <a href="/logout">Logout</a>
+<body>    
     <div id="app">
-      <beers-component v-bind:beers="beers"></beers-component>
-      <recipes-component v-bind:recipes="recipes"></recipes-component>
-      <div class="high-bar bg-green"> <span>Select cocktails</span></div>
+      <nav-bar></nav-bar>
+      <router-view></router-view>
     </div>
-    <script src="js/main.js" type="text/javascript"></script>
+    <script type="module" src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
