--- a/server/client/index.html
+++ b/server/client/index.html
@@ -23,6 +23,9 @@
 
     <div id="app">
       <nav-bar></nav-bar>
+      <div id="banner-image">
+        <img :src="bannerImage">
+      </div>
       <router-view></router-view>
     </div>
 
