--- a/server/client/login.html
+++ b/server/client/login.html
@@ -6,10 +6,7 @@
     <title>Login</title>
   </head>
   <body>
-    <script src="socket.io/socket.io.js"></script>
-    <script>
-      var socket = io("http://localhost:4000");
-    </script>
+    <script></script>
     <form action="login" method="post">
       <label for="email">Email:</label>
       <input type="text" name="email" id="" />
