frontpage login e register

--- a/server/client/frontpage.html
+++ b/server/client/frontpage.html
@@ -1,13 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>get together</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="css/bootstrap/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="/css/stylefrontpage.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+  
 </head>
 <body>  
-  Benvenuto su get Togheter
-  <br>
-  <a href="/login.html">Login</a> 
-  <a href="/register.html">Register</a> 
+    <div id="fp">
+      <nav-bar></nav-bar>
+    </div>
+    <div id ="pan">
+      <p id="infoapp">
+        DO YOU WANT TO ORGANIZE A PARTY OR A DINNER ?
+        </br>
+        REGISTER TO GET ALL THE NECESSARY ON THE BASIS OF YOUR PREFERENCES WITH A CLICK ! 
+        </br>
+        INVITE YOUR FRIENDS AND HAVE FUN !
+        </br>
+        CELEBRATING HAS NEVER BEEN SO SIMPLE...
+        </br>
+        SEEING IS BELIEVING
+      </p>
+    </div>
+    <div id="aboutuspan">
+      <p id="aboutustext">
+        Contact us for other information: get-together@gmail.com
+      </br>
+        Developer: Michela Capasso, Francesco Cermaria, Riccardo Casciotti
+      </br>
+        <a id="documentation" href="" > DOCUMENTATION </a>
+      </p>
+    </div>  
+  <script type="module" src="js/components/frontpage/mainfp.js" type="text/javascript"></script>
 </body>
 </html>
