--- a/server/client/login.html
+++ b/server/client/login.html
@@ -40,7 +40,7 @@
             <div id="bottoni">
                 <button type="submit" > Log in </button>
                 <a href="/oauthfb" title="Facebook" class="btn btn-block btn-facebook btn-lg">
-                    <span class="fa fa-facebook"></span> f
+                    <span class="fa fa-facebook"></span> Log in with Facebook
                 </a>
             </div>
         </div>
