--- a/server/client/index.html
+++ b/server/client/index.html
@@ -14,6 +14,7 @@
     
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+    <script src='https://unpkg.com/v-calendar'></script>
     
     <link rel="stylesheet" href="css/style.css">
 
