--- a/server/client/index.html
+++ b/server/client/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.5.0/index.min.css">
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/bootstrap/bootstrap.min.js"></script>
@@ -15,6 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
     <script src='https://unpkg.com/v-calendar'></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.5.0/index.min.js"></script>
     
     <link rel="stylesheet" href="css/style.css">
 
