--- a/server/client/index.html
+++ b/server/client/index.html
@@ -28,7 +28,9 @@
       <div id="banner-image">
         <img :src="bannerImage">
       </div>
+      <keep-alive exclude="recipeInfo">
       <router-view></router-view>
+    </keep-alive>
     </div>
 
     <script type="module" src="js/main.js" type="text/javascript"></script>
