--- a/server/client/index.html
+++ b/server/client/index.html
@@ -18,6 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.5.0/index.min.js"></script>
     
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/parties.css">
 
     <title>Get Together!</title>
 </head>
