--- a/server/client/login.html
+++ b/server/client/login.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="/css/login.css" />
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
   <body>
     <div id="fp">
       <nav-bar></nav-bar>
-    </div>
-    <form action="login" method="post">
+    
+    <form @submit="login" method="post">
         <div id="pan">
             <label for="email" id="email">Email:</label>
             <div id="emailline">
@@ -26,7 +26,7 @@
                     <path fill-rule="evenodd" d="M.071 4.243a.5.5 0 01.686-.172L8 8.417l7.243-4.346a.5.5 0 01.514.858L8 9.583.243 4.93a.5.5 0 01-.172-.686z" clip-rule="evenodd"/>
                     <path d="M6.752 8.932l.432-.252-.504-.864-.432.252.504.864zm-6 3.5l6-3.5-.504-.864-6 3.5.504.864zm8.496-3.5l-.432-.252.504-.864.432.252-.504.864zm6 3.5l-6-3.5.504-.864 6 3.5-.504.864z"/>
                 </svg>
-                <input type="email" name="email" id="emailform" placeholder="enter your email">
+                <input type="email" name="email" id="emailform" placeholder="enter your email" required>
             </div>
             
             <br>
@@ -35,9 +35,10 @@
                 <svg id="iconpsw" class="bi bi-lock" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M11.5 8h-7a1 1 0 00-1 1v5a1 1 0 001 1h7a1 1 0 001-1V9a1 1 0 00-1-1zm-7-1a2 2 0 00-2 2v5a2 2 0 002 2h7a2 2 0 002-2V9a2 2 0 00-2-2h-7zm0-3a3.5 3.5 0 117 0v3h-1V4a2.5 2.5 0 00-5 0v3h-1V4z" clip-rule="evenodd"/>
                 </svg>
-                <input type="password" name="password" id="pswform" placeholder="enter your password">
+                <input type="password" name="password" id="pswform" placeholder="enter your password" required>
             </div>
             <div id="bottoni">
+              <span>{{error}}</span>
                 <button type="submit" > Log in </button>
                 <a href="/oauthfb" title="Facebook" class="btn btn-block btn-facebook btn-lg">
                     <span class="fa fa-facebook"></span> Log in with Facebook
@@ -47,7 +48,7 @@
 
 
     </form>
-
+  </div>
     <script
       type="module"
       src="js/components/frontpage/mainfp.js"
