--- a/client/login.html
+++ b/client/login.html
@@ -17,7 +17,7 @@
     <div id="fp">
       <nav-bar></nav-bar>
     
-    <form @submit="login" method="post">
+    <form @submit="login">
         <div id="pan">
             <label for="email" id="email">Email:</label>
             <div id="emailline">
