--- a/client/frontpage.html
+++ b/client/frontpage.html
@@ -33,11 +33,11 @@
     </div>
     <div id="aboutuspan">
       <p id="aboutustext">
-        Contact us for other information: get-together@gmail.com
+        Contact us for other information:       get-together@gmail.com
       </br>
-        Developer: Michela Capasso, Francesco Cermaria, Riccardo Casciotti
+        Developer:     Michela Capasso, Francesco Cermaria, Riccardo Casciotti
       </br>
-        <a id="documentation" href="" > DOCUMENTATION </a>
+        <!-- <a id="documentation" href="" > DOCUMENTATION </a> -->
       </p>
     </div>  
   <script type="module" src="js/components/frontpage/mainfp.js" type="text/javascript"></script>
