--- a/client/login.html
+++ b/client/login.html
@@ -44,6 +44,11 @@
                     <span class="fa fa-facebook"></span> Log in with Facebook
                 </a>
             </div>
+            <div class="linktoregister">
+              <span style="color: black">Not Registered? </span>
+              <a href="/register.html">Click here</a>
+              <span style="color: black"> to join us</span>
+            </div>
         </div>
 
 
