--- a/client/frontpage.html
+++ b/client/frontpage.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap/bootstrap-grid.min.css">
     <link rel="stylesheet" href="/css/stylefrontpage.css">
+    <link rel="stylesheet" href="/css/navbarfp.css" />
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
