--- a/client/register.html
+++ b/client/register.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap-grid.min.css" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap-social.css" />
     <link rel="stylesheet" href="/css/register.css" />
+    <link rel="stylesheet" href="/css/navbarfp.css" />
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
