--- a/client/index.html
+++ b/client/index.html
@@ -43,10 +43,8 @@
       <div id="banner-image">
         <img :src="bannerImage" />
       </div>
-      <keep-alive v-bind:include="regexPat">
-        <transition name="opaci">
+      <keep-alive include="homeComponent">
           <router-view></router-view>
-      </transition>
       </keep-alive>
     </div>
 
