--- a/client/frontpage.html
+++ b/client/frontpage.html
@@ -30,6 +30,8 @@
         CELEBRATING HAS NEVER BEEN SO SIMPLE...
         </br>
         SEEING IS BELIEVING
+      </br>
+        <a href="/register.html" class="linkfp"><strong>Click here to sign up</strong> </a>
       </p>
     </div>
     <div id="aboutuspan">
