--- a/client/register.html
+++ b/client/register.html
@@ -124,6 +124,33 @@
             />
             
           </div>
+          <div class="line">
+            <label for="confirm_password" class="txt">Confirm password:</label>
+            <svg
+              class="bi bi-lock icon"
+              width="1em"
+              height="1em"
+              viewBox="0 0 16 16"
+              fill="currentColor"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M11.5 8h-7a1 1 0 00-1 1v5a1 1 0 001 1h7a1 1 0 001-1V9a1 1 0 00-1-1zm-7-1a2 2 0 00-2 2v5a2 2 0 002 2h7a2 2 0 002-2V9a2 2 0 00-2-2h-7zm0-3a3.5 3.5 0 117 0v3h-1V4a2.5 2.5 0 00-5 0v3h-1V4z"
+                clip-rule="evenodd"
+              />
+            </svg>
+            <input
+              type="password"
+              name="confirm_password"
+              class="form"
+              id="confirm_pswform"
+              placeholder="confirm your password"
+              @input="checkInput()"
+              required
+            />
+            
+          </div>
           <div class="errors"><span v-if="control && errorPassword">{{errorPassword}}</span></div>
           <div v-if="error" class="errors">
             <span v-if="control">{{error}}</span>
