--- a/client/register.html
+++ b/client/register.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="/css/register.css" />
     <link rel="stylesheet" href="/css/navbarfp.css" />
 
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="js/vue/vue.js"></script>
+    <script src="js/jquery/jquery.min.js"></script>
   </head>
   <body>
 
