--- a/client/login.html
+++ b/client/login.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/login.css" />
     <link rel="stylesheet" href="/css/navbarfp.css" />
 
-    <script src="js/vue/vue.js"></script>
+    <script src="js/vue/vue.min.js"></script>
     <script src="js/jquery/jquery.min.js"></script>
   </head>
   <body>
