--- a/client/register.html
+++ b/client/register.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/css/register.css" />
     <link rel="stylesheet" href="/css/navbarfp.css" />
 
-    <script src="js/vue/vue.js"></script>
+    <script src="js/vue/vue.min.js"></script>
     <script src="js/jquery/jquery.min.js"></script>
   </head>
   <body>
