--- a/client/login.html
+++ b/client/login.html
@@ -39,7 +39,7 @@
                 <input type="password" name="password" id="pswform" placeholder="enter your password" required>
             </div>
             <div id="bottoni">
-              <span v-cloak v-if="control" >{{error}}</span>
+              <span v-cloak>{{error}}</span>
                 <button type="submit" > Log in </button>
                 <a href="/oauthfb" title="Facebook" class="btn btn-block btn-facebook btn-lg">
                     <span class="fa fa-facebook"></span> Log in with Facebook
