--- a/client/register.html
+++ b/client/register.html
@@ -19,7 +19,7 @@
 
     <div id="fp">
       <nav-bar></nav-bar>
-      <form @submit="register">
+      <form @submit="register"  method="POST">
         <div id="pan">
           <div class="line">
             <label for="firstName" class="txt">First Name:</label>
