--- a/client/login.html
+++ b/client/login.html
@@ -18,7 +18,7 @@
     <div v-if="control" id="fp">
       <nav-bar></nav-bar>
     
-    <form @submit="login">
+    <form @submit="login" method="POST">
         <div id="pan">
             <label for="email" id="email">Email:</label>
             <div id="emailline">
