--- a/client/frontpage.html
+++ b/client/frontpage.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="/css/stylefrontpage.css">
-    <link rel="stylesheet" href="/css/navbarfp.css" />
+    <link rel="stylesheet" href="css/stylefrontpage.css">
+    <link rel="stylesheet" href="css/navbarfp.css" />
 
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+    <script src="js/vue/vue.min.js"></script>
+    <script src="js/vue/vue-router.min.js"></script>
   
 </head>
 <body>  
@@ -40,7 +40,7 @@
       </br>
         Developer:     Michela Capasso, Francesco Cermaria, Riccardo Casciotti
       </br>
-        <!-- <a id="documentation" href="" > DOCUMENTATION </a> -->
+        <a id="documentation" href="https://localhost:4000/api/docs" > Api Documentation </a>
       </p>
     </div>  
   <script type="module" src="js/components/frontpage/mainfp.js" type="text/javascript"></script>
